--- a/services.html
+++ b/services.html
@@ -24,17 +24,38 @@
             display: flex;
             justify-content: center;
             flex-wrap: wrap; /* Wrap links on smaller screens */
+            padding: 10px 0; /* Add padding for nav */
         }
 
         nav a {
             color: white;
             text-decoration: none;
-            margin: 0 15px;
+            margin: 0 10px;
+            padding: 10px 15px; /* Add padding for better click area */
+            border-radius: 5px; /* Rounded corners */
+            transition: background-color 0.3s; /* Smooth transition for hover */
             font-size: 18px;
         }
 
+        /* Colors for each menu item */
+        nav a:nth-child(1) {
+            background-color: #6a1b9a; /* Home: Deep purple */
+        }
+
+        nav a:nth-child(2) {
+            background-color: #d32f2f; /* Services: Red */
+        }
+
+        nav a:nth-child(3) {
+            background-color: #1976d2; /* About Us: Blue */
+        }
+
+        nav a:nth-child(4) {
+            background-color: #388e3c; /* Contact: Green */
+        }
+
         nav a:hover {
-            text-decoration: underline;
+            opacity: 0.8; /* Change opacity on hover */
         }
 
         .service-section {
@@ -89,6 +110,11 @@
 
             p {
                 font-size: 0.9rem; /* Adjust paragraph size for mobile */
+            }
+
+            nav a {
+                font-size: 16px; /* Adjust font size for mobile */
+                margin: 5px; /* Less margin on mobile */
             }
         }
     </style>
