--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                 <i class="fas fa-screwdriver icon"></i> <!-- Screwdriver Icon -->
                 FlashFixPro
             </h1>
+            <img src="images/logo.PNG" alt="FlashFixPro Logo" style="max-width: 200px; margin-top: 20px;"> <!-- Logo added -->
             <p>Your Mobile Repair Expert</p>
         </div>
     </section>
