--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-color: #f8f9fa; /* Light background color */
+            background-color: #f8f9fa; /* Light background color for overall page */
         }
 
         header {
@@ -66,6 +66,8 @@
             justify-content: center;
             height: 80vh; /* Set height for hero section */
             text-align: center;
+            background-color: #000; /* Black background for the hero section */
+            color: white; /* Change text color to white for visibility */
         }
 
         h1 {
@@ -87,7 +89,7 @@
         p {
             font-size: 2rem;
             margin-top: 20px;
-            color: #333; /* Dark text color */
+            color: #fff; /* White text for better contrast */
             animation: slideIn 1s ease-in-out; /* Slide in animation */
             opacity: 0; /* Set initial opacity to 0 for animation */
             transform: translateY(20px); /* Set initial position for animation */
@@ -114,7 +116,7 @@
         }
 
         footer {
-            background-color: #333; /* Dark footer */
+            background-color: #333; /* Dark grey for footer */
             color: white;
             padding: 20px 0;
             text-align: center;
