--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>FlashFixPro - Home</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome CDN -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Favicon added -->
     <style>
         body {
             margin: 0;
