--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlashFixPro - Contact</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Favicon added -->
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa; /* Light background color for overall page */
+        }
+
+        header {
+            background-color: #5d0059; /* Dark purple */
+            color: white;
+            padding: 15px 0;
+            text-align: center;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap; /* Wrap links on smaller screens */
+            padding: 10px 0; /* Add padding for nav */
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+            padding: 10px 15px; /* Add padding for better click area */
+            border-radius: 5px; /* Rounded corners */
+            transition: background-color 0.3s; /* Smooth transition for hover */
+            font-size: 18px;
+        }
+
+        /* Colors for each menu item */
+        nav a:nth-child(1) {
+            background-color: #6a1b9a; /* Home: Deep purple */
+        }
+
+        nav a:nth-child(2) {
+            background-color: #d32f2f; /* Services: Red */
+        }
+
+        nav a:nth-child(3) {
+            background-color: #1976d2; /* About Us: Blue */
+        }
+
+        nav a:nth-child(4) {
+            background-color: #388e3c; /* Contact: Green */
+        }
+
+        nav a:hover {
+            opacity: 0.8; /* Change opacity on hover */
+        }
+
+        section {
+            padding: 40px;
+            text-align: center;
+        }
+
+        footer {
+            background-color: #333; /* Dark grey for footer */
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
 
@@ -20,9 +89,9 @@
         </nav>
     </header>
 
-    <section style="padding: 40px; text-align: center;">
+    <section>
         <h2>Contact Us</h2>
-        <p>Have questions? Email us at <a href="mailto:ldkihumai@gmail.com">ldkihumai@gmail.com</a></p>
+        <p>Ready to fix your device? <strong>Email us to order:</strong> <a href="mailto:ldkihumai@gmail.com">ldkihumai@gmail.com</a></p>
     </section>
 
     <footer>
@@ -31,4 +100,3 @@
 
 </body>
 </html>
-
