--- a/about.html
+++ b/about.html
@@ -135,28 +135,21 @@
     <section class="team-container">
         <!-- Founder -->
         <div class="team-member founder">
-            <img src="images/founder.jpg" alt="Founder Photo" class="photo-frame">
+            <img src="images/founder.jpeg" alt="Founder Photo" class="photo-frame">
             <h3>Cd</h3>
             <p>Founder</p>
         </div>
 
         <!-- CEO -->
         <div class="team-member ceo">
-            <img src="images/ceo.jpg" alt="CEO Photo" class="photo-frame">
+            <img src="images/ceo.jpeg" alt="CEO Photo" class="photo-frame">
             <h3>Irfan Chopan</h3>
             <p>CEO</p>
         </div>
 
-        <!-- Operations Manager -->
-        <div class="team-member">
-            <img src="images/operations_manager.jpg" alt="Operations Manager Photo" class="photo-frame">
-            <h3>Aijaz Rehman</h3>
-            <p>Operations Manager</p>
-        </div>
-
         <!-- Lead Technician -->
         <div class="team-member">
-            <img src="images/lead_technician.jpg" alt="Lead Technician Photo" class="photo-frame">
+            <img src="images/md.jpeg" alt="Lead Technician Photo" class="photo-frame">
             <h3>Mohd Danish</h3>
             <p>Lead Technician</p>
         </div>
